[tool.poetry]
name = "poker-backend"
version = "0.1.0"
description = "Poker backend with FastAPI"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
asyncpg = "^0.27.0"
pydantic = "^1.10.11"
python-dotenv = "^1.0.0"
pokerkit = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
